# bazel-java-lab

./: .bazelrc  .gitignore  README.md  WORKSPACE  test.txt
src/main/java/: BUILD  Hello.java
src/main/java/com/resare/lab/: AccessResourceTest.java  BUILD  CodeGenerator.java  ExecOutputToStringTest.java  FileContentsToMap.java  FileContentsToMapTest.java  Greeter.java  Hello.java  HelloTest.java  JacksonTest.java  MultiLevelMapTest.java  SnowPackTest.java  VavrCollectionsTest.java  VavrControlTest.java
src/main/java/com/resare/lab/filedep/: BUILD.bazel  ToolWithFileAccess.java  filedep.bzl
src/main/java/com/resare/lab/loggingvuln/: BUILD  LoggingTest.java
src/main/resources/: BUILD
