load(":filedep.bzl", "my_function")


java_binary(
    name = "ToolWithFileAccess",
    srcs = [
        "ToolWithFileAccess.java",
    ],
    data = [
        ":my_data",
    ],
    deps = [
        "@bazel_tools//tools/java/runfiles",
    ]
)

filegroup(
    name = "my_data",
    srcs = glob(["txts/*.txt"]),
)
my_function(":ToolWithFileAccess")
